--- a/styles/styles.css
+++ b/styles/styles.css
@@ -905,6 +905,91 @@ body {
   margin-bottom: 0;
 }
 
+.footer {
+  position: relative;
+  top: -75px;
+  padding-bottom: -50px;
+}
+
+.footer__body {
+  margin: 0 auto;
+  max-width: 240px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.footer__logo {
+  width: 92px;
+  height: 48px;
+  margin-bottom: 50px;
+}
+
+.footer__content-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 14px;
+  margin-bottom: 30px;
+}
+
+.footer__content-block:nth-child(3) {
+  margin-bottom: 40px;
+}
+
+.footer__contacts-title {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  opacity: 0.5;
+}
+
+.footer .map-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer .map-block__icon {
+  margin-right: 26px;
+  width: 20px;
+  min-width: 20px;
+}
+
+.footer .map-block__img {
+  min-width: 80px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: 50% 50%;
+     object-position: 50% 50%;
+  background: no-repeat top left/cover url("styles/img/footer/Map.png");
+}
+
 ._sr-only {
   position: absolute;
   z-index: -99;
