--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -822,18 +822,73 @@ body {
 
 }
 
+.footer {
+  position: relative;
+  top: -75px;
+  padding-bottom: -50px;
+  
+  
+  &__body {
+    margin: 0 auto;
+    max-width: 240px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 20px;
+  }
 
-// .how-we-work {
-//   background-color: #fff;
-//   color: $second-text;
-//   &__title {
-//     font-weight: 400;
-//     font-size: 14px;
-//     line-height: 17px;
-//     text-align: center;
-//   }
+  &__logo {
+    width: 92px;
+    height: 48px;
+    margin-bottom: 50px;
+  }
 
-//   }
+  &__content-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 14px;
+    margin-bottom: 30px;
+    &:nth-child(3) {
+      margin-bottom: 40px;
+    }
+  }
+
+  &__contacts-title {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    opacity: 0.5;
+  }
+
+  .map-block {
+    display: flex;
+    align-items: center;
+
+    &__icon {
+      margin-right: 26px;
+      width: 20px;
+      min-width: 20px;
+    }
+
+    &__img {
+      min-width: 80px;
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      overflow: hidden;
+      object-fit: contain;
+      object-position: 50% 50%;
+      background: no-repeat top left/cover url("styles/img/footer/Map.png");
+    }
+  }
+
+}
+
 
 // // svg иконка меняет цвет при наведении
 // .how-we-work_item:hover {
@@ -863,78 +918,6 @@ body {
 //     //   тут короче нижнее подчеркивание
 //     // }
 //   }
-// }
-
-// /* accordion */
-
-// input::-ms-clear {
-//   display: none
-// }
-
-// .accordion {
-//   display: flex;
-//   flex-direction: column;
-//   gap: 20px;
-// }
-
-// .accordion--item {
-//   width: 100%;
-//   background: #fff;
-//   box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
-//   border-radius: 20px;
-//   font-family: Spartan, sans-serif;
-//   font-size: 18px;
-//   line-height: 1.4;
-//   letter-spacing: 0;
-// }
-
-// .accordion--label {
-//   position: relative;
-//   display: flex;
-//   flex-wrap: wrap;
-//   align-items: center;
-//   padding: 34px 45px 33px 0;
-// }
-
-// .accordion--icon::before {
-//   background-position: center;
-//   content: '';
-//   display: block;
-//   width: 83px;
-//   height: 32px;
-//   background-image: url("data:image/svg+xml,%3Csvg width='18' height='32' viewBox='0 0 18 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.28396 29.125L15.8549 15.5625L9.06945 8.78125L2.28396 2' stroke='black' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-//   background-repeat: no-repeat;
-
-//   transition: transform .3s;
-//   transform: rotate(0deg)
-// }
-
-// .accordion--question {
-//   margin: 0;
-//   font-weight: 600;
-// }
-
-// .accordion--answer {
-//   font-weight: 500;
-//   display: none;
-//   overflow: hidden;
-//   margin: 18px 0  0 83px;
-//   flex-basis: 1fr;
-// }
-
-// .accordion--input {
-//   position: absolute;
-//   opacity: 0;
-//   z-index: -99;
-// }
-
-// .accordion--input:checked + .accordion--label::before {
-//   transform: rotate(90deg);
-//   background-image: url("data:image/svg+xml,%3Csvg width='18' height='32' viewBox='0 0 18 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.28396 29.125L15.8549 15.5625L9.06945 8.7812");
-// }
-
-// li {
-//   list-style-type: "+ ";
 // }
 
 ._sr-only {
