--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,6 +152,7 @@ body {
     background: no-repeat center/cover url("img/header/fancycrave-277756-unsplash.png");
   }
   .section-1__body {
+    padding: 30px 0 25px;
     position: relative;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -163,20 +164,9 @@ body {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    z-index: 0;
-  }
-  .section-1__body::before {
-    position: absolute;
-    top: 80px;
-    right: -148px;
-    width: 298px;
-    height: 385px;
-    background: no-repeat center/cover url("img/header/E.png");
-    content: "";
-    opacity: 0.2;
-    z-index: -1;
   }
   .section-1__tag {
+    width: 100%;
     font-weight: 700;
     font-size: 13px;
     line-height: 15px;
@@ -188,7 +178,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin: 30px 0 10px;
+    margin-bottom: 10px;
   }
   .section-1__tag::before {
     width: 11px;
@@ -228,6 +218,17 @@ body {
             filter: drop-shadow(0px -5px 9px rgba(0, 0, 0, 0.1));
     z-index: -1;
     content: "";
+  }
+  .section-1__img::after {
+    position: absolute;
+    top: -90px;
+    left: 75px;
+    width: 298px;
+    height: 385px;
+    background: no-repeat center/cover url("img/header/E.png");
+    content: "";
+    opacity: 0.3;
+    z-index: -1;
   }
   .section-1__button {
     width: 100%;
@@ -273,7 +274,6 @@ body {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    margin-bottom: 24px;
   }
   .section-2 {
     padding: 40px 0 30px;
@@ -569,9 +569,6 @@ body {
             transform: rotate(-12.48deg);
     content: "";
   }
-  .section-4 .feedback__title {
-    margin-bottom: 32px;
-  }
   .section-4 .feedback__button {
     width: 100%;
     font-size: 13px;
@@ -592,6 +589,12 @@ body {
     line-height: 25px;
     text-align: center;
     margin-bottom: 38px;
+  }
+  .section-5__img-wrap {
+    position: relative;
+  }
+  .section-5__number {
+    display: none;
   }
   .section-5__img {
     margin: auto;
@@ -685,7 +688,7 @@ body {
     content: "";
   }
   .section-6__feedback-form {
-    display: block;
+    width: 100%;
     background: rgba(255, 255, 255, 0.1);
     -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -897,7 +900,7 @@ body {
     font-size: 22px;
     line-height: 28px;
     gap: 12px;
-    margin: 30px 0 20px;
+    margin-bottom: 20px;
   }
   .section-1__tag::before {
     width: 19px;
@@ -906,7 +909,7 @@ body {
   .section-1__title {
     font-size: 32px;
     line-height: 41px;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
   }
   .section-1__img {
     width: 251px;
@@ -916,6 +919,9 @@ body {
     width: 302px;
     height: 302px;
     left: -35px;
+  }
+  .section-1__img::after {
+    top: 0;
   }
   .section-1__button {
     font-size: 18px;
@@ -957,13 +963,83 @@ body {
     width: 230px;
     background-image: url("img/header/Logo.png");
   }
+  .header__contact-number {
+    font-family: SourceSansPro, sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 23px;
+  }
   .header__burger-menu-icon {
     margin-left: auto;
+  }
+  .section-1__body {
+    display: block;
+    width: 60%;
+    padding: 80px 0;
+  }
+  .section-1__title {
+    margin-bottom: 150px;
+  }
+  .section-1__img {
+    position: absolute;
+    top: 60px;
+    -webkit-transform: translate(110%, 0);
+            transform: translate(110%, 0);
+    right: 0;
+    width: 333px;
+    height: 481px;
+  }
+  .section-1__img::before {
+    display: none;
+  }
+  .section-1__img::after {
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+  }
+  .section-1__button {
+    width: 330px;
+  }
+  .section-4 .feedback::before {
+    width: 83px;
+    height: 83px;
+    margin-right: 40px;
+  }
+  .section-4 .feedback__button {
+    font-size: 18px;
+  }
+  .section-5 {
+    padding: 120px 0 0;
+  }
+  .section-5__title {
+    font-size: 42px;
+    line-height: 51px;
+    margin-bottom: 92px;
+  }
+  .section-5__img-wrap {
+    z-index: 0;
+  }
+  .section-5__number {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-weight: 700;
+    font-size: 190px;
+    line-height: 232px;
+    color: #EF8B54;
+    text-shadow: 5px 5px 5px rgba(239, 139, 84, 0.15);
+    z-index: -1;
   }
 }
 
 @media screen and (min-width: 1100px) {
+  .header__body {
+    height: 70px;
+  }
   .header__button {
+    display: block;
+    height: 40px;
+    width: 160px;
     font-family: SourceSansPro, sans-serif;
     font-weight: 300;
     font-size: 12px;
@@ -971,11 +1047,134 @@ body {
     color: #ff834e;
     border: 1px solid #ff834e;
     text-align: center;
-    display: inline-block;
     background-color: transparent;
   }
   .header__contact-number {
+    display: block;
+  }
+  .section-1__title {
+    margin-bottom: 25px;
+  }
+  .section-1__subtitle {
+    display: block;
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom: 200px;
+  }
+  .section-1__img {
+    width: 348px;
+    height: 512px;
+  }
+  .section-2__title {
+    font-size: 26px;
+    line-height: 32px;
+  }
+  .section-2 .card-step__title {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .section-3__title {
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 41px;
+  }
+  .section-3__title_secure, .section-3__title_products {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .section-3__description {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 29px;
+  }
+  .section-4::after {
+    display: none;
+  }
+  .section-4__cards-container {
+    margin-bottom: 100px;
+  }
+  .section-4 .feedback {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 990px;
+    background: #50386f;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    padding: 22px 240px 21px 30px;
+  }
+  .section-4 .feedback::before {
+    display: none;
+  }
+  .section-4 .feedback::after {
+    display: none;
+  }
+  .section-4 .feedback__button {
+    padding: 0 25px;
+    font-family: Montserrat, sans-serif;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    right: 0;
+    border: none;
+    border-radius: 0;
+    width: 240px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: left;
+    background: linear-gradient(147.62deg, #8D5DCC -128.51%, #55329E 221.38%);
+    -webkit-box-shadow: 0px 5px 10px rgba(94, 56, 158, 0.35);
+            box-shadow: 0px 5px 10px rgba(94, 56, 158, 0.35);
+  }
+  .section-4 .feedback__button::after {
     display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 15px;
+    position: relative;
+    top: 2px;
+    background: no-repeat center/contain url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.70008 1.32388C6.46583 1.32388 6.27594 1.13399 6.27594 0.899743C6.27594 0.665499 6.46583 0.475607 6.70008 0.475607L13.721 0.475606C13.8607 0.475606 13.9846 0.543134 14.0619 0.647325C14.1661 0.724602 14.2336 0.848515 14.2336 0.988207L14.2336 8.00914C14.2336 8.24338 14.0437 8.43328 13.8095 8.43328C13.5752 8.43328 13.3853 8.24338 13.3853 8.00914L13.3853 1.76378L0.753374 14.3957C0.587738 14.5614 0.31919 14.5614 0.153554 14.3957C-0.0120818 14.2301 -0.0120819 13.9616 0.153554 13.7959L12.6256 1.32388L6.70008 1.32388Z' fill='white'/%3E%3C/svg%3E%0A");
+    content: "";
+  }
+  .section-6__subtitle {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 30px;
+  }
+  .section-6__title {
+    font-weight: 700;
+    font-size: 41px;
+    line-height: 50px;
+    margin-bottom: 60px;
+  }
+  .section-6__banner {
+    padding: 54px 240px 53px 50px;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;
+  }
+  .section-6__list > li {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .footer__body {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 1060px;
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
